--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "type": "flarum-extension",
     "license": "MIT",
     "require": {
-        "flarum/core": "^1.2.0"
+        "flarum/core": "^1.2.0",
+        "v17development/flarum-blog": "^0.7.2"
     },
     "authors": [
         {
